# pysensmcda

./: .gitignore  .readthedocs.yaml  4crit_0.1.npy  LICENSE  README.md  out.npy  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  examples.rst  index.rst  modules.rst  pysensmcda.alternative.rst  pysensmcda.compromise.rst  pysensmcda.criteria.random_distribution.rst  pysensmcda.criteria.rst  pysensmcda.graphs.rst  pysensmcda.probabilistic.rst  pysensmcda.ranking.rst  pysensmcda.rst  readme_link.rst  requirements.txt
docs/example/: examples.ipynb  examples_pretty_print.py  graphs_examples.ipynb
examples/: examples.ipynb  graphs_examples.ipynb  literature_example.ipynb
pysenscraft/: __init__.py  abc.py  calculate_preference.py  utils.py  validation.py  validator.py
pysenscraft/alternative/: __init__.py  discrete.py  percentage.py  range.py  removal.py  sensitivity.py
pysenscraft/compromise/: HQ_compromise.py  ICRA.py  __init__.py  borda.py  dominance_directed_graph.py  improved_borda.py  rank_position.py
pysenscraft/criteria/: __init__.py  identification.py  percentage.py  random_weights.py  range.py  removal.py  scenarios.py
pysenscraft/criteria/random/: chisquare_distribution.py  laplace_distribution.py  normal_distribution.py  random_distribution.py  triangular_distribution.py  uniform_distribution.py
pysenscraft/graphs/: __init__.py  heatmap.py  hist.py  interval_plot.py  pd_ranking_graph.py  preference_distribution.py  rankings_distribution.py  slider_weights.py  values_distribution.py  weights_barplot.py
pysenscraft/old/: validation.py
pysenscraft/probabilistic/: __init__.py  matrix.py  monte_carlo_weights.py  perturbed_matrix.py  perturbed_weights.py  weights.py
pysenscraft/ranking/: __init__.py  alteration.py  demotion.py  fuzzy_ranking.py  promotion.py
pysensmcda/: __init__.py  calculate_preference.py  utils.py  validator.py
pysensmcda/alternative/: discrete.py  percentage.py  range.py  removal.py
pysensmcda/compromise/: HQ_compromise.py  ICRA.py  __init__.py  borda.py  dominance_directed_graph.py  improved_borda.py  rank_position.py
pysensmcda/criteria/: identification.py  percentage.py  range.py  removal.py  scenarios.py
pysensmcda/graphs/: __init__.py  heatmap.py  pd_ranking_graph.py  preference_distribution.py  rankings_distribution.py  values_distribution.py  weights_barplot.py
pysensmcda/probabilistic/: monte_carlo_weights.py  perturbed_matrix.py  perturbed_weights.py
pysensmcda/ranking/: alteration.py  demotion.py  fuzzy_ranking.py  promotion.py
tests/: test_calculate_preference.py  test_validator.py
tests/tests_alternative/: test_discrete.py  test_percentage.py  test_range.py  test_removal.py
tests/tests_compromise/: test_HQ_compromise.py  test_ICRA.py  test_borda.py  test_dominance_directed_graph.py  test_improved_borda.py  test_rank_position.py
tests/tests_criteria/: test_criteria_percentage.py  test_criteria_range.py  test_criteria_removal.py  test_distributions.py  test_identification.py  test_scenarios.py
tests/tests_probabilistic/: test_monte_carlo_weights.py  test_perturbed_matrix.py  test_perturbed_weights.py
tests/tests_ranking/: test_alteration.py  test_demotion.py  test_fuzzy_ranking.py  test_promotion.py
(+22 files in other folders)
