[metadata]
name = pysenscraft
version = attr: my_package.VERSION
author = Jakub Więckowski
author_email = j.wieckowski@il-pib.pl
description = Python Sensitivity Crafting Toolbox for Decision Support
long_description = file: README.md, LICENSE.txt
keywords = python, sensitivity analysis, decision making, mcda, robustness
license = MIT License
classifiers = Programming Language :: Python :: 3.10
python_requires = >= 3.10